--- a/Upg5/.vscode/settings.json
+++ b/Upg5/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "C:\\Python37\\python.exe",
+    "python.pythonPath": "D:\\deps\\Python37\\python.exe",
     "python.linting.pylintEnabled": true
 }
